--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Star Sports 2 Hindi HD</title>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/shaka-player.ui.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/controls.min.css" crossorigin="anonymous">
+
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
@@ -31,197 +33,133 @@
     .shaka-spinner,
     .shaka-spinner-svg {
       display: none !important;
-      visibility: hidden !important;
-      opacity: 0 !important;
     }
   </style>
 </head>
-<body>
+    
+  <body>
   <div class="shaka-video-container" data-shaka-player>
- <video autoplay playsinline preload="metadata" poster=""></video>
+    <video autoplay playsinline preload="metadata"></video>
   </div>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', async () => {
-      shaka.polyfill.installAll();
+<script>
+document.addEventListener('DOMContentLoaded', async () => {
 
-      if (!shaka.Player.isBrowserSupported()) {
-        console.error('Browser not supported');
-        return;
-      }
+shaka.polyfill.installAll();
+if (!shaka.Player.isBrowserSupported()) return;
 
-      const video = document.querySelector('video');
-      const player = new shaka.Player();
-      await player.attach(video);
+const video = document.querySelector('video');
+const player = new shaka.Player();
+await player.attach(video);
 
-      const container = document.querySelector('.shaka-video-container');
-      const ui = new shaka.ui.Overlay(player, container, video);
+const container = document.querySelector('.shaka-video-container');
+const ui = new shaka.ui.Overlay(player, container, video);
 
-      ui.configure({
-        controlPanelElements: [
-          'play_pause', 'time_and_duration', 'mute', 'volume',
-          'spacer', 'language', 'captions', 'picture_in_picture',
-          'quality', 'fullscreen'
-        ],
-        volumeBarColors: {
-  base: 'purple',
-  level: 'purple'
-},
+ui.configure({
+controlPanelElements: [
+'play_pause','time_and_duration','mute','volume',
+'spacer','language','captions','picture_in_picture',
+'quality','fullscreen'
+],
 seekBarColors: {
-  base: 'gold',
-  buffered: 'gold',
-  played: 'gold'
+base: 'white',
+buffered: 'red',
+played: 'green'
 }
-      });
+});
 
-      let drmConfig = {
-        clearKeys: {
-          "bd1ea6a1c1fb5dcdb709434e0826bbc0": "f57f22cba32739ce7beb1fab3f3d060b"
-        }
-      };
-      let cookieHeader = "hdnea=st=1764981808~exp=1765068208~acl=/*~hmac=bffcd924e504f2c4a22288e72d759a7282ea0daf9325f3c1b867d0c03f28731c";
-      let streamUrl = "https://jiotvpllive.cdn.jio.com/bpk-tv/Sports18_1_HD_BTS/output/index.mpd";
+let drmConfig = {
+clearKeys: {
+"b9d4acedc66c5660a1e06197a55bccd2":
+"dd53bab1a42f41ae8f0a5c8fd286f456"
+}
+};
 
-      try {
-        const response = await fetch('https://raw.githubusercontent.com/alex8875/m3u/refs/heads/main/jstar.m3u');
-        const m3uText = await response.text();
-        const lines = m3uText.split('\n');
+let cookieHeader =
+"__hdnea__=st=1771011362~exp=1771097762~acl=/*~hmac=2110e29dfaa34acd4bf61ac879fc4a5075b56abecc504448aeb51dab8a7b2169";
 
-        for (let i = 0; i < lines.length; i++) {
-          if (lines[i].includes('Star_Sports_HD')) {
-            for (let j = i - 1; j >= 0; j--) {
-              if (lines[j].startsWith('#EXTHTTP:')) {
-                const cookieMatch = lines[j].match(/"cookie":"([^"]+)"/);
-                if (cookieMatch) {
-                  cookieHeader = cookieMatch[1];
-                }
-                break;
-              }
-            }
-            break;
-          }
-        }
-      } catch (error) {
-        console.error('Failed to fetch M3U:', error);
-      }
+let streamUrl =
+"https://jiotvmblive.cdn.jio.com/bpk-tv/Sports18_1_HD_BTS/output/index.mpd";
 
-      player.configure({
-        drm: drmConfig,
-        streaming: {
-          lowLatencyMode: true,
-          bufferingGoal: 15,
-          rebufferingGoal: 2,
-          bufferBehind: 15,
-          retryParameters: {
-            timeout: 10000,
-            maxAttempts: 5,
-            baseDelay: 300,
-            backoffFactor: 1.2
-          },
-          segmentRequestTimeout: 8000,
-          segmentPrefetchLimit: 2,
-          useNativeHlsOnSafari: true
-        },
-        manifest: {
-          retryParameters: {
-            timeout: 8000,
-            maxAttempts: 3
-          }
-        }
-      });
+try {
+const response = await fetch(
+'https://allrounderid.pages.dev/api/jiotv2.json'
+);
+const data = await response.json();
 
-      player.getNetworkingEngine().registerRequestFilter((type, request) => {
-        request.headers['Referer'] = 'https://www.jiotv.com/';
-        request.headers['User-Agent'] = "plaYtv/7.1.5 (Linux;Android 13) ExoPlayerLib/2.11.6";
-        request.headers['Cookie'] = cookieHeader;
+const channel = data.find(ch => ch.channel_name === "DD Sports");
 
-        if (
-          (type === shaka.net.NetworkingEngine.RequestType.MANIFEST ||
-            type === shaka.net.NetworkingEngine.RequestType.SEGMENT) &&
-          request.uris[0] && !request.uris[0].includes('__hdnea=')
-        ) {
-          const separator = request.uris[0].includes('?') ? '&' : '?';
-          request.uris[0] += separator + cookieHeader;
-        }
-      });
+if (channel && channel.cookie) {
+  cookieHeader = channel.cookie;
+}
 
-      const enableAutoplay = () => {
-        video.setAttribute('autoplay', '');
-        video.setAttribute('playsinline', '');
-        video.autoplay = true;
-      };
+} catch (e) {}
 
-      const attemptAutoplay = async () => {
-        try {
-          video.muted = false;
-          await video.play();
-          console.log('Unmuted autoplay successful');
-          return true;
-        } catch (error) {
-          console.log('Unmuted autoplay failed:', error.message);
-          try {
-            video.muted = true;
-            await video.play();
-            console.log('Muted autoplay successful');
-            return true;
-          } catch (mutedError) {
-            console.log('Muted autoplay failed:', mutedError.message);
-            return false;
-          }
-        }
-      };
+let backupCookie = null;
+let usingBackupCookie = false;
 
-      player.addEventListener('error', (event) => {
-        console.error('Shaka Player Error:', event.detail);
-      });
+async function fetchBackupCookie() {
+if (backupCookie) return backupCookie;
+const res = await fetch('https://crickettv.site/api/cookie.json');
+const data = await res.json();
+backupCookie = data.cookie;
+return backupCookie;
+}
 
-      video.addEventListener('play', () => {
-        if (window.self === window.top && !document.fullscreenElement && window.innerWidth <= 768) {
-          container.requestFullscreen().catch(() => {
-            console.log('Fullscreen request failed');
-          });
-        }
-      }, { once: true });
+async function switchToBackupCookie() {
+if (usingBackupCookie) return;
+usingBackupCookie = true;
+cookieHeader = await fetchBackupCookie();
+try {
+await player.unload();
+await player.load(streamUrl);
+video.play();
+} catch (e) {}
+}
 
-      video.addEventListener('loadedmetadata', () => {
-        video.volume = 0.8;
-      });
+player.configure({
+drm: drmConfig
+});
 
-      let hasUserInteracted = false;
-      const enableSoundOnInteraction = () => {
-        if (!hasUserInteracted && video.muted) {
-          video.muted = false;
-          hasUserInteracted = true;
-          console.log('Sound enabled after user interaction');
-        }
-      };
-      ['click', 'touchstart', 'keydown'].forEach(event => {
-        document.addEventListener(event, enableSoundOnInteraction, { once: true });
-      });
+player.getNetworkingEngine().registerRequestFilter((type, request) => {
+request.headers['Referer'] = 'https://www.jiotv.com/';
+request.headers['User-Agent'] =
+"plaYtv/7.1.5 (Linux;Android 13) ExoPlayerLib/2.11.6";
+request.headers['Cookie'] = cookieHeader;
 
-      try {
-        enableAutoplay();
-        await player.load(streamUrl);
-        if (video.readyState >= 3) {
-          await attemptAutoplay();
-        } else {
-          video.addEventListener('canplay', attemptAutoplay, { once: true });
-          setTimeout(async () => {
-            if (video.paused) {
-              await attemptAutoplay();
-            }
-          }, 2000);
-        }
-      } catch (error) {
-        console.error('Load error:', error);
-      }
+if (
+  (type === shaka.net.NetworkingEngine.RequestType.MANIFEST ||
+   type === shaka.net.NetworkingEngine.RequestType.SEGMENT) &&
+  request.uris[0] &&
+  !request.uris[0].includes('__hdnea=')
+) {
+  const sep = request.uris[0].includes('?') ? '&' : '?';
+  request.uris[0] += sep + cookieHeader;
+}
 
-      document.addEventListener('visibilitychange', () => {
-        if (!document.hidden && video.paused) {
-          attemptAutoplay();
-        }
-      });
-    });
-  </script>
+});
+
+player.addEventListener('error', async (event) => {
+const err = event.detail;
+if (
+!usingBackupCookie &&
+(
+err.code === 401 ||
+err.code === 403 ||
+err.code === shaka.util.Error.Code.BAD_HTTP_STATUS ||
+err.code === shaka.util.Error.Code.MANIFEST_UNAVAILABLE
+)
+) {
+await switchToBackupCookie();
+}
+});
+
+try {
+await player.load(streamUrl);
+video.play();
+} catch (e) {}
+
+});
+</script>
 </body>
 </html>
